--- a/mongodb-pod.yaml
+++ b/mongodb-pod.yaml
@@ -3,8 +3,7 @@ kind: Pod
 metadata:
   name: mongodb
   labels:
-    app: demo
-    type: backend
+    app: mongodb
 spec:
   containers:
     - name: mongodb
