--- a/mongo-express-service.yaml
+++ b/mongo-express-service.yaml
@@ -1,19 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata: 
-  name: mongo-express-Service
-  labels:
-    app: demo
-    type: backend
+  name: mongo-express-service
 spec: 
-  type: NodePort
+  type: LoadBalancer
   ports:
     - port: 8081
       targetPort: 8081
       nodePort: 30002
   selector:
-      app: demo
-      type: backend
+      app: mongo-express
     
 
 
