--- a/mongo-service.yaml
+++ b/mongo-service.yaml
@@ -1,17 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata: 
-  name: mongo-Service
-  labels:
-    app: demo
-    type: backend
+  name: mongo-service
 spec: 
   ports:
     - port: 8080
       targetPort: 27017
   selector:
-      app: demo
-      type: backend
+      app: mongodb
     
 
 
