--- a/mongodb-deployment.yaml
+++ b/mongodb-deployment.yaml
@@ -1,26 +1,23 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mongodb-Deployment
+  name: mongodb
   labels:
-    app: demo
-    type: backend
+    app: mongodb
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: demo
-      type: backend
+     app: mongodb
   template:
       metadata:
         name: mongodb
         labels:
-          app: demo
-          type: backend
+            app: mongodb
       spec:
        containers:
         - name: mongodb
-          image: mongodb
+          image: mongo
           ports:
             - containerPort: 27017
           env:
